# learning_ai

./: .gitignore
mcp/: README.MD
mcp/agent/: REARDME.MD
mcp/cherry_studio/: TOURIST_README.MD  WEATHER_README.MD
mcp/client/: README.MD  client.py  pyproject.toml
mcp/server/: README.MD  pyproject.toml
mcp/server_sse/: README.MD  pyproject.toml
